Fixed styling error on Iphone-Room-View

--- a/client/src/components/Room/Room.css
+++ b/client/src/components/Room/Room.css
@@ -132,6 +132,7 @@
         margin: 0px 2px 0 0px;
         justify-content: center
     }
+    
     .room-nav h1{
         font-size: 65px;
         margin-bottom: 0;
@@ -141,7 +142,8 @@
         font-size: 20px;
         margin: 0 auto;
         padding: 0;
-        width: 160px;
+        text-align: center;
+        width: 145px;
         height: 25px;
         
     }
